# aws-cli-plugins

./: README.md  pyproject.toml
aws_cli_plugins/: __init__.py  cve.py
